# protein-detective

./: .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  pages.yml
docs/: alphafold.ipynb  cli_doc_hook.py  database.ipynb  index.md  pdbe.ipynb  uniprot.ipynb  workflow.ipynb
src/protein_detective/: alphafold.py  cli.py  db.py  pdbe.py  uniprot.py  uniprotkb.py  utils.py  workflow.py
src/protein_detective/alphafold/: __init__.py  density.py  entry_summary.py
src/protein_detective/alphafold_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
src/protein_detective/alphafold_client/api/: __init__.py  annotations_api.py  public_api_api.py
src/protein_detective/alphafold_client/models/: __init__.py  annotation.py  annotation_response.py  annotation_type.py  confidence_type.py  ensemble_sample_format.py  entity.py  entity_poly_type.py  entity_type.py  entry_summary.py  evidence.py  experimental_method.py  http_validation_error.py  identifier_category.py  location_inner.py  model_category.py  model_format.py  model_type.py  oligomeric_state.py  overview.py  region.py  summary_items.py  uniprot_entry.py  uniprot_summary.py  validation_error.py
src/protein_detective/pdbe/: fetch.py  io.py
src/protein_detective/powerfit/: argparser.py  options.py  run.py  solution.py
tests/: test_uniprot.py
tests/alpafold/: test_density.py
tests/pdbe/: test_io.py
