[project]
name = "protein_detective"
version = "0.1.0"
description = "Deduce the protein from a EM density"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sparqlwrapper>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
docs = [
    "ipykernel>=6.29.5",
]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"
